--- a/message.html
+++ b/message.html
@@ -90,7 +90,7 @@
      	 </ul>
     	</div>
 
-    	 <div ng-show="showSecondMenu" class="sidebar-content" id="second-menu-content" style="position: relative;float: right;top: -10px;background-color: whitesmoke; min-height: 200; overflow: auto;">
+    	 <div ng-show="showSecondMenu" class="sidebar-content" id="second-menu-content" style="position: relative;float: right;top: -10px;background-color: whitesmoke; min-height: 200; overflow: auto; width: 25%;">
     	 	<ul ng-show="showOptions" class="sidebar-links">
         <li style="border: 1px solid #e6e6e6; background-color: #e6e6e6;"> <a style="color: black; text-decoration: none;" href="/logout"><i class="fa fa-sign-out fa-lg" style="padding: 5px; padding-right: 10px;"></i>Logout</a> </li>
         <li style="border: 1px solid #e6e6e6; background-color: #e6e6e6;"> <a style="color: black; text-decoration: none;" href="" ng-click="menuClicked('email')"><i class="fa fa-envelope fa-lg" style="padding: 5px; padding-right: 10px;"></i>Account</a> </li>
@@ -143,7 +143,7 @@
         </div>
         <div class="modal-body" style="text-align: center">
             <div  style="padding-bottom: 20px;"><span class="avatar-profile">
-          <img alt="" ng-src="{{userData.avatar}}" title="Edit profile image" id="profile_img" class="avatar avatar-70 photo avatar-default cursor pic" height="200" width="200" >
+          <img alt="" ng-src="{{userData.avatar}}" title="Edit profile image" id="profile_img" class="avatar avatar-70 photo avatar-default pic" height="200" width="200" >
       </span></div>
         <div style="padding-bottom: 20px;">
         <button class="btn btn-primary" type="file" ngf-select="upload($file, $invalidFiles)" accept="image/*" ngf-max-height="1000" ngf-max-size="1MB" ng-model="file">Change Photo</button>
@@ -192,11 +192,11 @@
 "><i class="fa fa-arrow-left" style="float: left;" ng-click="dismissSettings('services')"></i>Services you provide ?</h3>
         </div>
         <div class="modal-body" style="text-align: center">
-            <div style="padding-bottom: 20px;"><div><strong>General Category</strong></div><div><select ng-model="userData.generalJob" ng-change="setCategories()">
+            <div style="padding-bottom: 20px;"><div><strong>General Category</strong></div><div><select style="width: 100%;" ng-model="userData.generalJob" ng-change="setCategories()">
             <option ng-repeat="(key, value) in categories" value="{{key}}">{{key}}</option>
           </select></div></div>
-        <div style="padding-bottom: 20px;"><div><strong>Specific Category</strong></div><div><select ng-model="userData.specificJob">
-            <option ng-repeat="category in specificCategory" value="{{category}}">{{category}}</option>
+        <div style="padding-bottom: 20px;"><div><strong>Specific Category</strong></div><div><select style="width: 100%;" ng-model="userData.specificJob" ng-options="i as i for i in specificCategory">
+            <option></option>
           </select></div>
         </div>
         </div>
@@ -222,7 +222,7 @@
     <div ng-show="editOptions.email" style="background-color: whitesmoke;">
         <div class="modal-header">
             <h3 class="modal-title" style="text-align: center; padding-top: 20px;
-"><i class="fa fa-arrow-left" style="float: left;" ng-click="dismissSettings('email')"></i>Email Id</h3>
+"><i class="fa fa-arrow-left" style="float: left;" ng-click="dismissSettings('email')"></i>Email Address</h3>
         </div>
         <div class="modal-body" style="text-align: center">
             <div style="padding-bottom: 20px;"><div><input style="padding-top: 10px;" ng-model="userData.email">
@@ -365,7 +365,7 @@
         <div class="modal-body" style="text-align: center">
         	<div style="padding-bottom: 20px;">Upload your profle picture. Remember this picture is supposed to represent your professional brand</div>
             <div  style="padding-bottom: 20px;"><span class="avatar-profile">
-    			<img alt="" ng-src="{{userData.avatar}}" title="Edit profile image" id="profile_img" class="avatar avatar-70 photo avatar-default cursor pic" height="200" width="200" >
+    			<img alt="" ng-src="{{userData.avatar}}" title="Edit profile image" id="profile_img" class="avatar avatar-70 photo avatar-default pic" height="200" width="200" >
 			</span></div>
     		<div style="padding-bottom: 20px;">
     		<button class="btn btn-primary" type="file" ngf-select="upload($file, $invalidFiles)" accept="image/*" ngf-max-height="1000" ngf-max-size="1MB" ng-model="file">Upload</button>
