--- a/message.html
+++ b/message.html
@@ -47,9 +47,11 @@
       <!-- SEARCH BOX -->
       <div id="morphsearch" class="morphsearch">
          <form class="morphsearch-form">            
-            <input class="morphsearch-input" type="search" placeholder="Search..."/>
+            <input class="morphsearch-input" type="search" placeholder="Search..." ng-model="search_element"  ng-change="typed_search_element(search_element)" />
+             <div class="input-group-btn">
+                 <button class="btn btn-default" ng-click="search_bar()" type="submit" style="height: 34px;"><i class="fa fa-search"></i></button>
+             </div>
             <!--button class="morphsearch-submit" type="submit">Search</button-->
-
          </form>
          <!-- Auto complete search results -->
          <div class="morphsearch-content">
@@ -63,8 +65,15 @@
       <div class="morphsearch-overlay">
 
       </div>
-      <!-- End of SEARCH BOX -->     
+      <!-- End of SEARCH BOX -->
 
+
+        <!-- Start of drop down for search -->
+
+            <select class="form-control" id="searchby" ng-model="selected_dropdown"  ng-options="search as search for search in searchby" ng-change="test(selected_dropdown)">
+                <!--<option class="scrollable-menu"></option>-->
+            </select>
+        <!-- End of drop down for search -->
 
       <ul class="top-head-list fonting">
       	<li><a href="">Hello {{userName}}</a></li>
