Restriction on search

--- a/message.html
+++ b/message.html
@@ -52,7 +52,7 @@
             
         <!-- End of drop down for search -->           
             <input style="width: 70%" class="morphsearch-input" type="search" placeholder="Search..." ng-model="search_element"  ng-change="typed_search_element(search_element)" />
-            <!-- <select id="searchby" ng-model="selected_dropdown"  ng-options="search as search for search in searchby" ng-change="test(selected_dropdown)"> -->
+            <select id="searchby" ng-model="selected_dropdown"  ng-options="search as search for search in searchby" ng-change="test(selected_dropdown)">
                 <!--<option class="scrollable-menu"></option>-->
             </select>
             <!--  <div class="input-group-btn"> -->
